Wed Mar 22 15:43:02 GMT 2000  Adam D. Moss <adam@gimp.org>

	* gimprc.in: enable perfect-mouse in default gimprc.

2000-03-21  Michael Natterer  <mitch@gimp.org>

	* app/flip_tool.c: yesterday's "cleanups" made the file
	un-compileable. Probably too much beer involved.

2000-03-21  Tuomas Kuosmanen  <tigert@gimp.org>

	* gimp1_1_splash.ppm: Trumpets and Circus Entertainment to
	make the weary hard working developers happy while we are
	approaching the goal, Gimp 1.2.. :)

	= a new splash screen.. hope you like it.

Tue Mar 21 04:11:42 CET 2000  Michael Natterer  <mitch@gimp.org>
	                      Sven Neumann <sven@gimp.org>

	* app/fileops.c
	* app/gdisplay.[ch]: when reverting an image, reconnect all 
	affected views to the reverted version. This fixes one of the
	bugs Tigert pointed out at GUADEC.

	* app/gimage_mask.[ch]
	* app/flip_tool.c: cleanups

2000-03-20  Michael Natterer  <mitch@gimp.org>

	* plug-ins/gfig/gfig.c: fixed a SEGV I have introduced by
	accidentially replacing g_malloc0() with g_new() instead of
	g_new0(). Andy found the crash, thanks.

Mon Mar 20 19:15:19 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* app/preferences_dialog.c: Typo fix.

2000-03-18  Seth Burgess <sjburges@gimp.org>
	
	* plug-ins/common/colortoalpha.c: Fixed handling of previously
	existing alpha, so it can be run successively now (much more
	useful)

2000-03-18    <tigert@guadec1.enst.fr>

	* pixmaps/linked.xpm: another icon for the L&C&P dialog.. to be 
	used sometime.

	* pixmaps/eye.xpm: new totally wacked commit from mitch's account
	from GUADEC.. this will sometimes be used once mitch gets around
	to actually implement the stuff in layers dialog (ph3ar!) :)

2000-03-18  Jay Cox  <jaycox@earthlink.net>

	* app/paint_funcs.c:  Make sure we don't divide by zero in
 	scale_region.  Fixes bugs #4783 and #6907.

2000-03-17  Birger Langkjer <birger.langkjer@image.dk>

	* plug-ins/MapObject/mapobject_ui.c:565: fixed typo/spelling
	Transpararent -> Transparent